--- a/src/styles_home.css
+++ b/src/styles_home.css
@@ -310,7 +310,7 @@ body {
   background-repeat: no-repeat;
   background-position: center right;
   position: relative;
-  z-index: 10;
+  z-index: 1;
   margin-bottom: -5em;
 }
 
@@ -635,7 +635,7 @@ footer {
     padding: 30px;
     background-color: #fff; 
     position: fixed;
-    z-index: 10;
+    z-index: 5;
   }
   
   
@@ -893,6 +893,7 @@ footer {
   padding: 50px;
   text-align: center;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .contact-text {
