--- a/src/styles_locations.css
+++ b/src/styles_locations.css
@@ -546,6 +546,7 @@ footer {
     padding: 50px;
     text-align: center;
     box-sizing: border-box;
+    z-index: 1;
   }
   
   .contact-text {
