--- a/src/styles_web_design.css
+++ b/src/styles_web_design.css
@@ -773,6 +773,7 @@ body {
     padding: 50px;
     text-align: center;
     box-sizing: border-box;
+    z-index: 1;
   }
   
   .contact-text {
